@@ -948,6 +948,7 @@ private:
     ColumnManager               m_ColumnManager;
 
 	std::map<CString,bool>		m_mapFilenameToChecked; ///< Remember manually de-/selected items
+	std::set<CTSVNPath>			m_externalSet;
 	CComCriticalSection			m_critSec;
 
 	friend class CSVNStatusListCtrlDropTarget;
