@@ -35,6 +35,8 @@
        (Stefan Fuhrmann)
 - NEW: Revision graph settings page. Several previously hidden
        features are now available to the user. (Stefan Fuhrmann)
+- NEW: The status list control shows the entries grouped by externals if
+       no changelists are present. (Stefan)
 - CHG: The bug-ID column width in the log dialog is now limited 
        to 200 pixels. (Stefan)
 - CHG: The right-drag context menu now only shows "Export" if a versioned
